Import styles css
Se integra el css del trabajo anterior, a falta de dar un mejor estilo al registrar

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <title>Aplicación de Facturación</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./lib/bootstrap-5.3.6-dist/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="./css/styles.css">
   <link rel="manifest" href="./manifest.json">
 </head>
 
